<resources>
    <string name="app_name">The FM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The FM</string>
    <string name="nav_header_subtitle">asmisalan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_slideshow">Slideshow</string>

    <!-- Authentication labels-->
    <string name="menu_logout">Logout</string>
    <string name="menu_join">Subscribe</string>

    <!-- list labels-->
    <string name="menu_tracks">Canciones</string>
    <string name="menu_artists">Artistas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
