<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracks">

    <fragment
        android:id="@+id/nav_tracks"
        android:name="com.example.umusic.ui.Tracks.Tracks"
        android:label="@string/menu_tracks"
        tools:layout="@layout/tracks_fragment" />


    <fragment
        android:id="@+id/nav_artist"
        android:name="com.example.umusic.ui.Artists.Artists"
        android:label="@string/menu_artists"
        tools:layout="@layout/artists_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.umusic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.umusic.ui.Auth.join"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_tools" />
</navigation>