<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_tracks" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_artists" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
